k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5050
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP
