k8s/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: default
spec:
  backend:
    serviceName: frontend
    servicePort: 80
